// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader renders 1`] = `
<div
  className="Inline-sc-1rz1cju-0 kwswbg"
>
  <div
    className="LoaderWrapper-sc-1viw7t5-0 jTmiqa"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;

exports[`Loader renders with different colours 1`] = `
<div
  className="Inline-sc-1rz1cju-0 kwswbg"
>
  <div
    className="LoaderWrapper-sc-1viw7t5-0 jTmiqa"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="LoaderWrapper-sc-1viw7t5-0 bLQdgy"
    color="dodoria.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="LoaderWrapper-sc-1viw7t5-0 djeXiq"
    color="trunks.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="LoaderWrapper-sc-1viw7t5-0 dyTOwi"
    color="raditz.100"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;

exports[`Loader renders with sizes 1`] = `
<div
  className="Inline-sc-1rz1cju-0 kwswbg"
>
  <div
    className="LoaderWrapper-sc-1viw7t5-0 dDkDuX"
    size="twoxsmall"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="LoaderWrapper-sc-1viw7t5-0 grewvn"
    size="xsmall"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="LoaderWrapper-sc-1viw7t5-0 ezpduX"
    size="small"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="LoaderWrapper-sc-1viw7t5-0 jTmiqa"
    size="medium"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
  <div
    className="LoaderWrapper-sc-1viw7t5-0 jrAKxu"
    size="large"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;
